// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainMenu /> rendering should render render 1 NavLink components when not authenticated 1`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              Nieuwe melding
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<MainMenu /> rendering should render render 2 NavLink components when authenticated 1`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              Nieuwe melding
            </span>
          </NavLink>
        </li>
        <li>
          <NavLink
            activeClassName="active"
            to="/manage/incidents"
          >
            <span
              className="linklabel"
            >
              Afhandelen
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
